--- a/views/restaurants/new.hbs
+++ b/views/restaurants/new.hbs
@@ -2,9 +2,14 @@
 <form method="POST" action="/restaurants">
     <input type="text" name="name" placeholder="name">
     <input type="text" name="description" placeholder="description">
-{{!-- you will start using "address" part when you 
+
+    <label>Address</label>
+    <input type="text" name="latitude" placeholder="latitude" >
+    <input type="text" name="longitude" placeholder="longitude">
+
+{{!-- you will start using "address" part when you
 set up your model to be able to store lat and long, so add address here:  --}}
-    
+
 
     <input type="submit" name="" id="submit">
 </form>
