--- a/views/restaurants/show.hbs
+++ b/views/restaurants/show.hbs
@@ -1,4 +1,10 @@
 <h3 id="restaurantName" data-id="{{ restaurant.id}}">{{ restaurant.name}}</h3>
 <p>{{ restaurant.description}}</p>
+<p>
+
+    Longitud: {{ restaurant.location.coordinates.[0]}} ,  Latitud: {{ restaurant.location.coordinates.[1]}}
+</p>
+
+
 <a href="/restaurants/{{restaurant._id}}/edit">Edit this restaurant</a>
 <a href="/restaurants">Go back to the list</a>
