--- a/views/restaurants/index.hbs
+++ b/views/restaurants/index.hbs
@@ -4,14 +4,20 @@
     <a href="/restaurants/new">Create new restaurant</a>
     <ul>
         {{#each restaurants}}
-        <li>
-            <a href="/restaurants/{{ this._id}}">{{ this.name}}</a>
-            |
-            <a href="/restaurants/{{ this._id}}/delete">Delete</a>
-        </li>
+            <li>
+                <a href="/restaurants/{{ this._id}}">{{ this.name}}</a>
+                |
+                <a href="/restaurants/{{ this._id}}/delete">Delete</a>
+            </li>
         {{/each }}
     </ul>
     {{!-- add map here --}}
 </div>
+<div id="map" style="  width: 100%;  height: 400px;"></div>
 {{!-- added your scripts here --}}
-  
+
+<!--  Axios CDN  -->
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUeQXCyJDlhOtCB8JwWAk8zCxpjk6k-jo">
+</script>
+<script type="text/javascript" src="/javascripts/main.js"></script>
