--- a/views/restaurants/show.hbs
+++ b/views/restaurants/show.hbs
@@ -1,5 +1,10 @@
 <h3 id="restaurantName" data-id="{{ restaurant.id}}">{{ restaurant.name}}</h3>
 <p>{{ restaurant.description}}</p>
+<h4>Dirección</h4>
+<p>
+    {{ restaurant.address}}
+</p>
+
 <p>
 
     Longitud: {{ restaurant.location.coordinates.[0]}} , Latitud: {{ restaurant.location.coordinates.[1]}}
