--- a/views/restaurants/update.hbs
+++ b/views/restaurants/update.hbs
@@ -1,12 +1,106 @@
-  <h3>Edit restaurant</h3>
+<h3>Edit restaurant</h3>
 <form method="POST" action="/restaurants/{{ restaurant._id}}">
     <label>Name:</label>
     <input type="" name="name" placeholder="Name" value="{{ restaurant.name}}">
     <label>Description:</label>
     <input type="" name="description" placeholder="Description" value="{{ restaurant.description}}">
+
     <br>
-    <label>Address</label>
-        <input type="text" name="latitude" id="latitude" placeholder="Latitude" value="{{ restaurant.location.coordinates.[1]}}">
-        <input type="text" name="longitude" id="longitude" placeholder="Longitude" value="{{ restaurant.location.coordinates.[0]}}">
+    <br>
+    <label>Dirección</label>
+    <textarea name="address" id="address">{{ restaurant.address}}</textarea>
+
+    <label>Coordenadas</label>
+    <input type="text" name="latitude" id="latitude" placeholder="Latitude"
+           value="{{ restaurant.location.coordinates.[1]}}">
+    <input type="text" name="longitude" id="longitude" placeholder="Longitude"
+           value="{{ restaurant.location.coordinates.[0]}}">
+    <br>
     <button type="submit" name="" id="submit">Edit</button>
 </form>
+
+
+<div id="map" style="  width: 100%;  height: 400px;"></div>
+{{!-- added your scripts here --}}
+
+<!--  Axios CDN  -->
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUeQXCyJDlhOtCB8JwWAk8zCxpjk6k-jo">
+</script>
+<script>
+
+
+    let center = {
+        lat: undefined,
+        lng: undefined
+    };
+
+    window.onload = () => {
+
+
+        let address = document.getElementById('address');
+
+        const restaurant = {
+            lat: {{ restaurant.location.coordinates.[1]}},
+            lng:  {{ restaurant.location.coordinates.[0]}}
+        };
+
+        const map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 13,
+            center: restaurant
+        });
+
+
+        const markers = [];
+
+        const pin = new google.maps.Marker({
+            position: {
+                lat:{{ restaurant.location.coordinates.[1] }},
+                lng: {{restaurant.location.coordinates.[0]}}
+            },
+            map: map,
+            title: restaurant.name
+        });
+        markers.push(pin);
+
+
+        let center = {
+            lat: undefined,
+            lng: undefined
+        };
+
+
+        /**/
+
+
+        const geocoder = new google.maps.Geocoder();
+
+        document.getElementById('submit').addEventListener('click', function () {
+            geocodeAddress(geocoder, map);
+        });
+
+        function geocodeAddress(geocoder, resultsMap) {
+
+            console.log(address.value);
+
+            geocoder.geocode({'address': address.value}, function (results, status) {
+
+                if (status === 'OK') {
+                    resultsMap.setCenter(results[0].geometry.location);
+                    let marker = new google.maps.Marker({
+                        map: resultsMap,
+                        position: results[0].geometry.location
+                    });
+                    document.getElementById('latitude').value = results[0].geometry.location.lat();
+                    document.getElementById('longitude').value = results[0].geometry.location.lng();
+                } else {
+                    alert('Geocode was not successful for the following reason: ' + status);
+                }
+            });
+        }
+
+
+    };
+
+
+</script>
