--- a/views/restaurants/update.hbs
+++ b/views/restaurants/update.hbs
@@ -20,6 +20,8 @@
 </form>
 
 
+<button id="testGeocoder">Probar geocode</button>
+
 <div id="map" style="  width: 100%;  height: 400px;"></div>
 {{!-- added your scripts here --}}
 
@@ -79,6 +81,12 @@
             geocodeAddress(geocoder, map);
         });
 
+        document.getElementById('testGeocoder').addEventListener('click', function () {
+            geocodeAddress(geocoder, map);
+        });
+
+
+
         function geocodeAddress(geocoder, resultsMap) {
 
             console.log(address.value);
@@ -95,7 +103,11 @@
                     document.getElementById('longitude').value = results[0].geometry.location.lng();
                 } else {
                     alert('Geocode was not successful for the following reason: ' + status);
+                    let x=0;
+                    return false;
+
                 }
+                return false
             });
         }
 
